--- a/modules/news/main.css
+++ b/modules/news/main.css
@@ -32,7 +32,7 @@
     display: block;
     position: relative;
     padding: 0 130px 0 0;
-    height: 135px;
+    height: 50%;
     font-size: 14px;
     line-height: 16px;
     color: rgb(180,180,180);
