--- a/app/css/style.css
+++ b/app/css/style.css
@@ -17,6 +17,8 @@ strong {font-weight: 400 !important;}
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+    padding: 0;
 }
 
 .hub_module_container .hub_module {
@@ -30,9 +32,8 @@ strong {font-weight: 400 !important;}
     grid-row-start: var(--top);
     grid-column-end: span var(--width);
     grid-row-end: span var(--height);
-    border: 1px solid rgb(50,50,50);
-    border-top: 0;
-    border-left: 0;
+    background-color: #111;
+    border-radius: 5px;
     line-height: 30px;
     padding: 40px;
     overflow: hidden;
