--- a/modules/spotify/main.css
+++ b/modules/spotify/main.css
@@ -1,4 +1,5 @@
-
+.hub_module[data-module='Spotify']:after,
+.hub_module[data-module='Spotify'] .center .img,
 .hub_module[data-module='Spotify'] .center span {
     transition: all 0.2s ease-in-out;
 }
@@ -29,6 +30,10 @@
     background-size: cover;
 }
 
+.hub_module[data-module='Spotify'].inactive .img {
+    opacity: 0;
+}
+
 .hub_module[data-module='Spotify'] .bg {
     display: block;
     position: absolute;
@@ -49,6 +54,10 @@
     width: 100%; height: 100%;
     background: radial-gradient(closest-side, rgba(0,0,0,0), rgba(0,0,0,1));
     opacity: 0.5;
+}
+
+.hub_module[data-module='Spotify'].inactive:after {
+    opacity: 0;
 }
 
 .hub_module[data-module='Spotify'] .center span {
@@ -89,5 +98,9 @@
     top: 0; left: 0;
     height: 100%; width: 0;
     background-color: rgba(255, 255, 255, 0.75);
-    transition: all 100ms linear;
+    transition: all 500ms linear;
+}
+
+.hub_module[data-module='Spotify'].inactive .progress {
+    opacity: 0;
 }
