--- a/modules/weather/main.css
+++ b/modules/weather/main.css
@@ -22,13 +22,12 @@
     font-size: 60px;
 }
 
-.hub_module[data-module='Weather'] .forecast_temp, .hub_module[data-module='Weather'] .forecast_rain {
+.hub_module[data-module='Weather'] .forecast_temp, .hub_module[data-module='Weather'] .forecast_rain, .hub_module[data-module='Weather'] .forecast_ind {
     position: absolute;
     display: block;
     bottom: 0; left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
 }
 
 .hub_module[data-module='Weather'] .forecast_temp polygon, .hub_module[data-module='Weather'] .forecast_rain path {
@@ -40,10 +39,17 @@
 
 .hub_module[data-module='Weather'] .forecast_temp path {
     stroke: rgba(255,0,0,0.6);
+    fill: transparent;
 }
 
 .hub_module[data-module='Weather'] .forecast_rain path {
     fill: rgba(0, 182, 237, 0.4);
+}
+
+.hub_module[data-module='Weather'] .forecast_ind path {
+    fill: transparent;
+    stroke-width: 1;
+    stroke: rgba(255,255,255,0.25);
 }
 
 .hub_module[data-module='Weather'] .forecast_timeline {
