--- a/modules/news/main.css
+++ b/modules/news/main.css
@@ -48,7 +48,7 @@
     background-size: cover; 
     background-position: center;
     border-radius: 0;
-    background-color: rgb(0, 50, 100);
+    background-color: #003264;
     filter: saturate(0.75) brightness(0.75);
 }
 
