--- a/modules/news/main.css
+++ b/modules/news/main.css
@@ -95,3 +95,21 @@
     text-shadow: 2px 2px 20px rgba(0,0,0,0.5), -2px -2px 20px rgba(0,0,0,0.5);
     margin-bottom: 5px;
 }
+
+.hub_module[data-module='News'] article .break {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    z-index: 10;
+    color: #fff;
+    background: #c00;
+    font-size: 14px;   
+    font-weight: bold; 
+    display: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+}
+
+.hub_module[data-module='News'] article.breaking .break {
+    display: inline-block;
+}
